# clipper-go

./: README.md  doc.go  go.mod
src/: clipper.go  clipper_capi.cpp  clipper_capi.go  clipper_capi.hpp  clipper_test.go
src/c/: CMakeLists.txt  clipper.cc  clipper.h  main.c
